--- a/Demomvc/Views/Shared/_Layout.cshtml
+++ b/Demomvc/Views/Shared/_Layout.cshtml
@@ -28,6 +28,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Person</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DaiLy" asp-action="Index">Đại Lý</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HeThongPhanPhoi" asp-action="Index">Hệ Thống Phân Phối</a>
+                        </li>
                     </ul>
                 </div>
             </div>
