--- a/Demomvc/Views/Employee/Details.cshtml
+++ b/Demomvc/Views/Employee/Details.cshtml
@@ -11,20 +11,32 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fullname)
+            @Html.DisplayNameFor(model => model.EmployeeID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fullname)
+            @Html.DisplayFor(model => model.EmployeeID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.Company)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
+            @Html.DisplayFor(model => model.Company)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FullName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FullName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.EmployerID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.PersonID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
