--- a/Demomvc/Views/Shared/_Layout.cshtml
+++ b/Demomvc/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="HeThongPhanPhoi" asp-action="Index">Hệ Thống Phân Phối</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
