--- a/Demomvc/Views/Person/Index.cshtml
+++ b/Demomvc/Views/Person/Index.cshtml
@@ -59,12 +59,6 @@
     </tbody>
 </table>
 
-@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new
-    {
-        page = page,
-
-    }), new PagedListRenderOptions
-{
-    LiElementClasses = new string[] { "page-item" },
-    PageClasses = new string[] { "page-link" }
-})
+@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new{page = page,}), 
+new PagedListRenderOptions{LiElementClasses = new string[] { "page-item" },
+PageClasses = new string[] { "page-link" }})
