--- a/Demomvc/Views/Shared/_Layout.cshtml
+++ b/Demomvc/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MemberUnit" asp-action="Index">MemberUnit</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Account</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
